# BITBOSS_BACKUP

./: .gitignore  AutoTransfer.sh  CreditDiffDetector.sh  README.md  buildAll.sh  install.md  installSAS.sh  publish.sh  sastest.ini  setip.sh  updateSAS.sh
Code/BitBossInterface/: BitBossInterface.sln
Code/BitBossInterface/BitBossInterface/: BasicAccountingMeter.cs  BitBossInterface.csproj  EGMAccounting.cs  EGMInfo.cs  EGMSettings.cs  EGMStatus.cs  ExtendedAccountingMeter.cs  GameAccounting.cs  GameInfo.cs  GameSettings.cs  PhysicalEGM.cs  VirtualEGM.cs  XmlFileSerializer.cs
Code/BitBossInterface/SASClientConsole/: Program.cs  SASClientConsole.csproj  runsc
Code/BitBossWebApiController/: BitBossWebApiController.sln  build.sh  run.sh  version.txt
Code/BitbossCardReaderController/: ArrayMethodsModule.cs  BitbossCardReaderController.csproj  CardReaderController.cs  Program.cs
Code/DLLs/SASComms/: build.sh  (+13 more)
Code/DLLs/SerialPortController/: CMakeLists.txt  buildSPController.sh  spcontroller.cpp  spcontroller.h
Code/DLLs/SerialPortController/Drivers/cp210x/: CP210x_VCP_Linux_4.x_Release_Notes.txt  cp210x.c
Code/MainController/: CD.cd  CardReaderHandler.cs  InterfacingSettings.cs  MainController.csproj  MainController.sln  PhysicalEGMController.cs  Program.cs  TransactionsController.cs  VirtualEGMController.cs  WebApiHandler.cs  XmlFileSerializer.cs  appsettings.json  build.sh  runsc.sh
deploy/: EnablePorts.sh  crontime  enableports.service  install.sh  netcfg.sh  nginx.default  setid.sh  settime.sh  slotapi.service  slotcontroller.service  sudoer.sh  upgrade.sh
(+71 files in other folders)
